feat: Convert SquiresApp to MPDEE Digidocs skeleton
- Renamed project from 'avsworklog' to 'digidocs'
- Updated all branding from 'Squires' to 'MPDEE Digidocs'
- Replaced AVS Yellow (#F1D64A) with Professional Blue (#3b82f6)
- Removed forced dark mode, implemented system-based theme switching
- Updated navbar, login page, and home page with new branding
- Cleaned /data folder (removed all Squires-specific samples)
- Updated README.md with skeleton app documentation
- Renamed 'RAMS' to 'Documents' in user-facing UI labels
- Created database import script for fresh deployments
- Added MIGRATION_NOTES.md documenting the conversion process
- Added VERIFICATION_CHECKLIST.md for post-migration testing

Breaking changes:
- New theme colors (Professional Blue replaces AVS Yellow)
- Light theme is now default (system preference-based)
- Internal 'rams' naming remains (see MIGRATION_NOTES.md)

Ready for client customization and deployment.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "avsworklog",
-  "version": "0.1.0",
+  "name": "digidocs",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,6 +19,7 @@
     "seed:inspections-sql": "tsx scripts/seed-inspections-sql.ts",
     "migrate": "tsx scripts/run-migration.ts",
     "migrate:day-of-week": "tsx scripts/run-day-of-week-migration.ts",
+    "import:database": "tsx scripts/import-skeleton-database.ts",
     "test:reports": "tsx scripts/test-reports.ts",
     "test:processed-status": "tsx scripts/test-processed-status.ts"
   },
