style: Standardize branding to DIGIDOCS uppercase across all titles

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MPDEE Digidocs",
-  "short_name": "Digidocs",
+  "name": "MPDEE DIGIDOCS",
+  "short_name": "DIGIDOCS",
   "description": "Digital workforce management system for timesheets, inspections, and documents",
   "start_url": "/",
   "scope": "/",
